G1: G1PeriodicGCTask::should_start_periodic_gc may use uninitialised value if os::loadavg is unsupported

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • gc
    • b18

      If os::loadavg is unsupported (as is the case on Windows) recent_load will be used with a indeterminate uninitialised value, resulting in a strange log-line.

      Example output (when os::loadavg returns -1):
      ```
      ./images/jdk/bin/java -Xlog:gc -Xlog:gc+periodic=debug -XX:G1PeriodicGCInterval=1 -XX:G1PeriodicGCSystemLoadThreshold=1 --version
      [0.015s][info][gc] Using G1
      [0.052s][debug][gc,periodic] Checking for periodic GC.
      [0.052s][debug][gc,periodic] Load -5314010372517807647283750286542177604307566955124202298657110301286024565751467488997011497523400915218988848162908025095251475452883610273262870620813970880702873922007837303063754086453326881912422810930200791418157490736660992630758605035109999689038468218762046137453549407645927178560594162686623744.00 is higher than threshold 1.00. Skipping.
      ```

            Assignee:
            Guanqiang Han
            Reporter:
            Axel Boldt-Christmas
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: