8368089: G1: G1PeriodicGCTask::should_start_periodic_gc may use uninitialised value if os::loadavg is unsupported

Refine log message for unsupported os::loadavg in G1 periodic GC